--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "debug.terminal.clearBeforeReusing": true
