--- a/tests/mp/CMakeLists.txt
+++ b/tests/mp/CMakeLists.txt
@@ -7,3 +7,8 @@ target_link_libraries(${test_name}
 	PRIVATE
 		${PROJECT_NAME}::${component_name}
 )
+
+add_test(
+	NAME 	${PROJECT_NAME}_validate_${component_name}
+	COMMAND $<TARGET_FILE:${test_name}>
+)
