[project::Github-Actions-CI] fix test flag for cmake gcc-11

--- a/.github/.workflows/cmake-Ubuntu-gcc_11.yml
+++ b/.github/.workflows/cmake-Ubuntu-gcc_11.yml
@@ -33,7 +33,7 @@ jobs:
      #working-directory: ${{github.workspace}}/out/build/${{matrix.BUILD_TYPE}}
       run: |
         cmake \
-            -DGCL_BUILD_TEST:BOOL=TRUE                                                              \
+            -DCSL_BUILD_ALL_TESTS:BOOL=TRUE                                                              \
             -DCMAKE_BUILD_TYPE:STRING=${{matrix.BUILD_TYPE}}                                        \
             -DCMAKE_INSTALL_PREFIX:PATH=${{github.workspace}}/out/install/${{matrix.BUILD_TYPE}}    \
             -S ${{github.workspace}}                                                                \
