[project::Github-Actions-CI] fix default tests building

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-std=c++20",
-                "-DCPP_SHELVE_STANDALONE_EDIT__",
+                "-DCSL_BUILD_ALL_TESTS:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
@@ -38,7 +38,7 @@
                 "-g",
                 "-stdlib=libstdc++",
                 "-std=c++20",
-                "-DCPP_SHELVE_STANDALONE_EDIT__",
+                "DCSL_BUILD_ALL_TESTS:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
