--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,10 @@ foreach(component_name IN LISTS CSL_COMPONENT_LIST)
     if (${CSL_BUILD_ALL_TESTS})
         set(CSL_BUILD_TEST_${component_name} ON)
     else()
-        option(CSL_BUILD_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] : Tests : all of csl::${component_name}" OFF)
+        option(CSL_BUILD_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] : csl::${component_name} (tests)" OFF)
     endif()
     if (CSL_BUILD_TEST_${component_name})
-        message(STATUS "[${CMAKE_PROJECT_NAME}] : Tests : building csl::${component_name} ...")
+        message(STATUS "[${CMAKE_PROJECT_NAME}] : csl::${component_name} (tests) ...")
         LIST(APPEND CSL_TESTS_LIST ${component_name})
     endif()
 endforeach()
