--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -1,9 +1,12 @@
-name: cmake-Ubuntu-clang_13
+name: cmake-Ubuntu-clang_$relase_id
 
 on: [push, pull_request]
 
+env:
+  relase_id: 14
+
 jobs:
-  cmake-Ubuntu-clang_13_build_test:
+  cmake-Ubuntu-clang_build_test:
 
     runs-on: ubuntu-latest
 
@@ -19,13 +22,13 @@ jobs:
     - name: Initialize compiler (Clang)
       run: |
           sudo apt update
-          sudo apt install libstdc++-11-dev
+          sudo apt install libstdc++-$relase_id-dev
           sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
           sudo update-alternatives \
-            --install /usr/bin/clang clang /usr/bin/clang-13 100
+            --install /usr/bin/clang clang /usr/bin/clang-$relase_id 100
           sudo update-alternatives \
-            --install /usr/bin/clang++ clang++ /usr/bin/clang++-13 100
-          sudo apt install libc++1-13 libc++-13-dev libc++abi-13-dev libc++abi1-13
+            --install /usr/bin/clang++ clang++ /usr/bin/clang++-$relase_id 100
+          sudo apt install libc++1-$relase_id libc++-$relase_id-dev libc++abi-$relase_id-dev libc++abi1-$relase_id
 
     - name: cmake create build env - ${{matrix.BUILD_TYPE}} - ${{matrix.STL_IMPLEMENTATION}}
       run: |
@@ -43,8 +46,8 @@ jobs:
             -B ${{github.workspace}}/out/build/${{matrix.BUILD_TYPE}}/${{matrix.CSL_COMPONENTS}}
         
       env:
-        CC:   clang-13
-        CXX:  clang++-13
+        CC:   clang-$relase_id
+        CXX:  clang++-$relase_id
 
     - name: cmake build - ${{matrix.CSL_COMPONENTS}} (${{matrix.BUILD_TYPE}}, ${{matrix.STL_IMPLEMENTATION}})
       run: |
