[project] cmake : add -Wall but unknown-pragmas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ if (${CSL_TESTS_LIST_length} EQUAL 0)
 else()
     enable_testing()
 
+    add_compile_options(-Wall -Wno-unknown-pragmas)
+
     if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         add_compile_options(-fdiagnostics-color=always)
     elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
