[doc] refactor md-to-gh-pages

--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: JamesIves/github-pages-deploy-action@v4.3.3
       with:
           branch: main
-          folder: docs
+          folder: gh-pages
