--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Generates Doxygen documentation
+      #- name: Generates Doxygen documentation
       # TODO
 
       - name: Deploy 🚀 
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-            branch: main
+            branch: gh-pages
             folder: gh-pages
