[CI] fixing doxygen custom index for wf

--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -27,6 +27,10 @@ jobs:
           sudo mkdir -p docs/output/wf/
           sudo doxygen docs/details/wf.Doxyfile
 
+      - name: Copy README to docs
+        run: |
+          cp README.md docs/
+
       - name: Deploy 🚀 
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
