--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -27,9 +27,10 @@ jobs:
           sudo mkdir -p docs/output/wf/
           sudo doxygen docs/details/wf.Doxyfile
 
-      - name: Copy README to docs
+      - name: Generates host page (README)
         run: |
           cp README.md docs/
+          cp docs/details/_config.yml .
 
       - name: Deploy 🚀 
         uses: JamesIves/github-pages-deploy-action@v4.3.3
