[repo] update vscode extensions recommandations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,14 +4,15 @@
         "jeff-hykin.better-cpp-syntax",
         "ibm.output-colorizer",
         "ms-vscode.cpptools",
-        "ms-vscode.cpptools-extension-pack",
         "twxs.cmake",
         "ms-vscode.cmake-tools",
         "cschlosser.doxdocgen",
         "yzhang.markdown-all-in-one",
         "davidanson.vscode-markdownlint",
         "ms-vscode.cpptools-themes",
-        "sonarsource.sonarlint-vscode",
-        "hbenl.vscode-test-explorer"
+        "hbenl.vscode-test-explorer",
+        "ms-vscode.test-adapter-converter",
+        "fredericbonnet.cmake-test-adapter",
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
