--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,11 +74,11 @@ else()
 
     add_compile_options(-Wall -Wno-unknown-pragmas)
 
-    if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-        add_compile_options(-fdiagnostics-color=always)
-    elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        add_compile_options(-fcolor-diagnostics)
-    endif()
+    # if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    #     add_compile_options(-fdiagnostics-color=always)
+    # elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    #     add_compile_options(-fcolor-diagnostics)
+    # endif()
 
     # Catch2
 endif()
