--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,3 +86,10 @@ endif()
 foreach(component_name IN LISTS CSL_TESTS_LIST)
     add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
 endforeach()
+foreach(component_name IN LISTS CSL_TESTS_LIST)
+    if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
+        message(AUTHOR_WARNING "[${CMAKE_PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
+        continue()
+    endif()
+    add_subdirectory(${PROJECT_SOURCE_DIR}/examples/${component_name})
+endforeach()
