[ag] dedicated test cmake target for bitfield support

--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(component_name ag)
+
+# Test : default
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
@@ -11,5 +13,21 @@ target_link_libraries(${test_name}
 
 add_test(
 	NAME 	${PROJECT_NAME}_validate_${component_name}
+	COMMAND $<TARGET_FILE:${test_name}>
+)
+
+# Test : with bitfield support
+set(test_name test_${PROJECT_NAME}_${component_name}_bitfield_support_compile_time)
+
+add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_bitfield_support.cpp)
+target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
+add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
+target_link_libraries(${test_name}
+	PRIVATE
+		${PROJECT_NAME}::${component_name}
+)
+
+add_test(
+	NAME 	${PROJECT_NAME}_validate_${component_name}_bitfield_support
 	COMMAND $<TARGET_FILE:${test_name}>
 )
