[ag] docs : awesome-css as submodule (CI)

--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
+      - name: Submodules
+        run: |
+          git submodule init
+          git submodule update
+
       - name: Doxygen installation
         run: |
           sudo apt update
