[ag] docs : fixing awesome-css theme/style

--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Submodules (awesome-css)
         run: |
           git submodule update --init --recursive
-          find docs/details/doxygen-awesome-css/ -maxdepth 1 -type f \( -name '*.js' -o -name '*.css' \) -delete
+          find docs/details/doxygen-awesome-css/ -maxdepth 1 -type f ! \( -name '*.js' -o -name '*.css' \) -delete
+          ls docs/details/doxygen-awesome-css/
 
       - name: Doxygen installation
         run: |
