[ag] docs : #75 (wip : javascript load examples) : add one example to deployement

--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           cp README.md docs/
           cp docs/details/_config.yml docs/
+          cp -a examples/ docs/
 
       - name: Deploy 🚀 
         uses: JamesIves/github-pages-deploy-action@v4.3.3
