--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/details/doxygen-awesome-css"]
 	path = docs/details/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
+[submodule "docs/details/highlight.js"]
+	path = docs/details/highlight.js
+	url = https://github.com/highlightjs/highlight.js.git
