--- a/.github/workflows/docs_to_gh_pages.yml
+++ b/.github/workflows/docs_to_gh_pages.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Submodules (awesome-css)
         run: |
           git submodule update --init --recursive
-          find docs/details/doxygen-awesome-css/ -maxdepth 1 -type f ! \( -name '*.js' -o -name '*.css' -o -name doxygen-custom \) -delete
+          find docs/details/doxygen-awesome-css/        -maxdepth 1 -type f ! \( -name '*.js' -o -name '*.css' -o -name doxygen-custom \) -delete
+          find docs/details/awesome-doc-code-sections/  -maxdepth 1 -type f ! \( -name '*.js' -o -name '*.css'                         \) -delete
 
       - name: Doxygen installation
         run: |
