--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -3,10 +3,10 @@ name: cmake-Ubuntu-clang
 on: [push, pull_request]
 
 env:
-  relase_id: 15
-  CC:   clang-15
-  CXX:  clang++-15
-  libstdcpp_release_id: 11
+  relase_id: 16
+  CC:   clang-16
+  CXX:  clang++-16
+  libstdcpp_release_id: 12
 
 jobs:
   cmake-Ubuntu-clang_build_test:
@@ -23,11 +23,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Initialize compiler (Clang)
-    # or sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh ${relase_id})" 
       run: |
           sudo apt update
           sudo apt install libstdc++-$libstdcpp_release_id-dev
-          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" $release_id all
           sudo update-alternatives \
             --install /usr/bin/clang clang /usr/bin/clang-$relase_id 100
           sudo update-alternatives \
