--- a/tests/mp/CMakeLists.txt
+++ b/tests/mp/CMakeLists.txt
@@ -1,5 +1,8 @@
 set(component_name mp)
+set(TEST_LIST "")
+
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
+list(APPEND TEST_LIST ${test_name})
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
@@ -11,4 +14,9 @@ target_link_libraries(${test_name}
 add_test(
 	NAME 	${PROJECT_NAME}_test_${component_name}
 	COMMAND $<TARGET_FILE:${test_name}>
+)
+
+# Tests: all
+add_custom_target("${component_name}_build_all_tests"
+	DEPENDS ${TEST_LIST}
 )
