--- a/tests/wf/CMakeLists.txt
+++ b/tests/wf/CMakeLists.txt
@@ -1,5 +1,8 @@
 set(component_name wf)
+set(TEST_LIST "")
+
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
+list(APPEND TEST_LIST ${test_name})
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
@@ -12,4 +15,9 @@ target_link_libraries(${test_name}
 add_test(
 	NAME 	${PROJECT_NAME}_test_${component_name}
 	COMMAND $<TARGET_FILE:${test_name}>
+)
+
+# Tests: all
+add_custom_target("${component_name}_build_all_tests"
+	DEPENDS ${TEST_LIST}
 )
